--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,11 +12,13 @@ check-format-job:
   script:
     - ./tools/check-format
   only:  
-    - solver-implementations
+    - solver_implementations
+    - merge_requests
 
 check-compile-full:
   stage: build
   script:
     - mkdir ./build && cd ./build && cmake .. && make
   only:
-    - solver-implementations
+    - solver_implementations
+    - merge_requests
