--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ check-format-job:
   script:
     - ./tools/check-format
   only:  
-    - solver_implementations
+    - master
     - merge_requests
 
 check-compile-full:
@@ -20,5 +20,5 @@ check-compile-full:
   script:
     - mkdir ./build && cd ./build && cmake .. && make
   only:
-    - solver_implementations
+    - master
     - merge_requests
